--- a/index.html
+++ b/index.html
@@ -362,40 +362,32 @@
     </div>
 
     <script>
-        // 구글 폼 URL - 실제 구글 폼 URL로 변경해야 합니다
-        const GOOGLE_FORM_URL = 'https://docs.google.com/forms/d/e/YOUR_FORM_ID/formResponse';
-        
-        // 구글 폼 필드 ID들 - 실제 폼에 맞게 변경해야 합니다
-        const FORM_FIELDS = {
-            name: 'entry.123456789',      // 이름 필드
-            affiliation: 'entry.987654321', // 소속 필드
-            email: 'entry.555666777',     // 이메일 필드
-            phone: 'entry.888999000',     // 연락처 필드
-            location: 'entry.111222333',  // 위치 필드
-            coordinates: 'entry.222333444', // 좌표 필드
-            timestamp: 'entry.444555666', // 타임스탬프 필드
-            deviceId: 'entry.777888999'   // 기기 ID 필드
+        // 노션 설정 - 실제 값으로 변경해야 합니다
+        const NOTION_CONFIG = {
+            token: 'YOUR_NOTION_TOKEN',           // 노션 Integration Token
+            databaseId: 'YOUR_DATABASE_ID',       // 노션 데이터베이스 ID
+            apiUrl: 'https://api.notion.com/v1/pages'
         };
 
         // 허용된 위치 설정 (대학교 세미나실 좌표)
         const ALLOWED_LOCATIONS = [
             {
-                name: "단호홀",
-                lat: 37.228,    // 실제 좌표로 변경 필요
-                lng: 127.167,   // 실제 좌표로 변경 필요
+                name: "대학교 세미나실 A동",
+                lat: 37.5665,    // 실제 좌표로 변경 필요
+                lng: 126.9780,   // 실제 좌표로 변경 필요
                 radius: 100      // 허용 반경 (미터)
             },
             {
-                name: "벽수홀",
-                lat: 37.228,    // 실제 좌표로 변경 필요
-                lng: 127.167,   // 실제 좌표로 변경 필요
-                radius: 50      // 허용 반경 (미터)
+                name: "대학교 세미나실 B동",
+                lat: 37.5670,    // 실제 좌표로 변경 필요
+                lng: 126.9785,   // 실제 좌표로 변경 필요
+                radius: 100      // 허용 반경 (미터)
             },
             {
                 name: "대학교 본관",
-                lat: 37.227,    // 실제 좌표로 변경 필요
-                lng: 127.166,   // 실제 좌표로 변경 필요
-                radius: 50      // 허용 반경 (미터)
+                lat: 37.5660,    // 실제 좌표로 변경 필요
+                lng: 126.9775,   // 실제 좌표로 변경 필요
+                radius: 150      // 허용 반경 (미터)
             }
         ];
 
@@ -692,8 +684,8 @@
                         return;
                     }
 
-                    // 구글 폼에 데이터 제출
-                    await this.submitToGoogleForm(formData);
+                    // 노션에 데이터 제출
+                    await this.submitToNotion(formData);
 
                     // 성공 처리
                     this.markAsSubmitted();
