--- a/index.html
+++ b/index.html
@@ -364,21 +364,21 @@
     <script>
         // 노션 설정 - 실제 값으로 변경해야 합니다
         const NOTION_CONFIG = {
-            token: 'YOUR_NOTION_TOKEN',           // 노션 Integration Token
-            databaseId: 'YOUR_DATABASE_ID',       // 노션 데이터베이스 ID
+            token: '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',           // 노션 Integration Token
+            databaseId: '216f9634440580afa93be4801e7fd525',       // 노션 데이터베이스 ID
             apiUrl: 'https://api.notion.com/v1/pages'
         };
 
         // 허용된 위치 설정 (대학교 세미나실 좌표)
         const ALLOWED_LOCATIONS = [
             {
-                name: "대학교 세미나실 A동",
+                name: "단호홀",
                 lat: 37.5665,    // 실제 좌표로 변경 필요
                 lng: 126.9780,   // 실제 좌표로 변경 필요
                 radius: 100      // 허용 반경 (미터)
             },
             {
-                name: "대학교 세미나실 B동",
+                name: "벽소홀",
                 lat: 37.5670,    // 실제 좌표로 변경 필요
                 lng: 126.9785,   // 실제 좌표로 변경 필요
                 radius: 100      // 허용 반경 (미터)
