--- a/index.html
+++ b/index.html
@@ -362,32 +362,28 @@
     </div>
 
     <script>
-        // 노션 설정 - 실제 값으로 변경해야 합니다
-        const NOTION_CONFIG = {
-            token: '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',           // 노션 Integration Token
-            databaseId: '216f9634440580afa93be4801e7fd525',       // 노션 데이터베이스 ID
-            apiUrl: 'https://api.notion.com/v1/pages'
-        };
+        // Google Apps Script 웹 앱 URL - 실제 URL로 변경해야 합니다
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzhXNdbbM6kF1Qouok0d5c-7AG3aaprSSzynqJ49gARQWMz-wUOT_qwc5KaFomaFJhZ0Q/exec';
 
         // 허용된 위치 설정 (대학교 세미나실 좌표)
         const ALLOWED_LOCATIONS = [
             {
                 name: "단호홀",
-                lat: 37.227,    // 실제 좌표로 변경 필요
-                lng: 127.166,   // 실제 좌표로 변경 필요
-                radius: 100      // 허용 반경 (미터)
+                lat: 37.228848,    // 실제 좌표로 변경 필요
+                lng: 127.167855,   // 실제 좌표로 변경 필요
+                radius: 30      // 허용 반경 (미터)
             },
             {
                 name: "벽소홀",
-                lat: 37.227,    // 실제 좌표로 변경 필요
-                lng: 127.166,   // 실제 좌표로 변경 필요
-                radius: 100      // 허용 반경 (미터)
+                lat: 37.228767,    // 실제 좌표로 변경 필요
+                lng: 127.167449,   // 실제 좌표로 변경 필요
+                radius: 30      // 허용 반경 (미터)
             },
             {
                 name: "대학교 본관",
-                lat: 37.227,    // 실제 좌표로 변경 필요
-                lng: 127.166,   // 실제 좌표로 변경 필요
-                radius: 150      // 허용 반경 (미터)
+                lat: 37.227239,    // 실제 좌표로 변경 필요
+                lng: 127.166598,   // 실제 좌표로 변경 필요
+                radius: 30      // 허용 반경 (미터)
             }
         ];
 
@@ -684,8 +680,8 @@
                         return;
                     }
 
-                    // 노션에 데이터 제출
-                    await this.submitToNotion(formData);
+                    // 구글 시트에 데이터 제출
+                    await this.submitToGoogleSheets(formData);
 
                     // 성공 처리
                     this.markAsSubmitted();
