--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
                 name: "단호홀",
                 lat: 37.228848,    // 실제 좌표로 변경 필요
                 lng: 127.167855,   // 실제 좌표로 변경 필요
-                radius: 30      // 허용 반경 (미터)
+                radius: 1000000      // 허용 반경 (미터)
             },
             {
                 name: "벽소홀",
