--- a/index.html
+++ b/index.html
@@ -369,9 +369,9 @@
         const ALLOWED_LOCATIONS = [
         {
                 name: "단호홀",
-                lat: 37.228848,    // 실제 좌표로 변경 필요
-                lng: 127.167855,   // 실제 좌표로 변경 필요
-                radius: 1000000      // 허용 반경 (미터)
+                lat: 37.2,    // 실제 좌표로 변경 필요
+                lng: 127.1,   // 실제 좌표로 변경 필요
+                radius: 100000      // 허용 반경 (미터)
             },
             {
                 name: "벽소홀",
