--- a/index.html
+++ b/index.html
@@ -367,23 +367,23 @@
 
         // 허용된 위치 설정 (대학교 세미나실 좌표)
         const ALLOWED_LOCATIONS = [
-            {
-                name: "대학교 세미나실 A동",
-                lat: 37.5665,    // 실제 좌표로 변경 필요
-                lng: 126.9780,   // 실제 좌표로 변경 필요
-                radius: 100      // 허용 반경 (미터)
+        {
+                name: "단호홀",
+                lat: 37.228848,    // 실제 좌표로 변경 필요
+                lng: 127.167855,   // 실제 좌표로 변경 필요
+                radius: 30      // 허용 반경 (미터)
             },
             {
-                name: "대학교 세미나실 B동",
-                lat: 37.5670,    // 실제 좌표로 변경 필요
-                lng: 126.9785,   // 실제 좌표로 변경 필요
-                radius: 100      // 허용 반경 (미터)
+                name: "벽소홀",
+                lat: 37.228767,    // 실제 좌표로 변경 필요
+                lng: 127.167449,   // 실제 좌표로 변경 필요
+                radius: 30      // 허용 반경 (미터)
             },
             {
                 name: "대학교 본관",
-                lat: 37.5660,    // 실제 좌표로 변경 필요
-                lng: 126.9775,   // 실제 좌표로 변경 필요
-                radius: 150      // 허용 반경 (미터)
+                lat: 37.227239,    // 실제 좌표로 변경 필요
+                lng: 127.166598,   // 실제 좌표로 변경 필요
+                radius: 30      // 허용 반경 (미터)
             }
         ];
 
