--- a/admin.html
+++ b/admin.html
@@ -248,7 +248,7 @@
         <div class="login-form">
             <div class="text-center mb-8">
                 <h1 class="text-3xl font-bold text-gray-800 mb-2">🔐 관리자 로그인</h1>
-                <p class="text-gray-600">출석 체크 시스템 관리 v26</p>
+                <p class="text-gray-600">출석 체크 시스템 관리 v29</p>
             </div>
             
             <form id="loginForm">
@@ -358,8 +358,11 @@
                             <button class="btn btn-warning w-full mb-2" onclick="removeSampleData()">
                                 🧪 샘플 데이터 제거
                             </button>
-                            <button class="btn btn-primary w-full" onclick="checkCurrentStatus()">
+                            <button class="btn btn-primary w-full mb-2" onclick="checkCurrentStatus()">
                                 🔍 현재 상태 확인
+                            </button>
+                            <button class="btn btn-success w-full" onclick="showResetInstructions()">
+                                📋 수동 초기화 방법
                             </button>
                         </div>
                         
