--- a/admin.html
+++ b/admin.html
@@ -269,7 +269,7 @@
         <div class="login-form">
             <div class="text-center mb-6">
                 <h1 class="text-2xl font-bold text-gray-800 mb-2">🔐 관리자 로그인</h1>
-                <p class="text-gray-600">출석 체크 시스템 관리</p>
+                <p class="text-gray-600">출석 체크 시스템 관리 v11</p>
             </div>
             
             <form id="loginForm">
